Add cheevos to /api, add tests, fix bugs
